src/style.css
/*
Main color: #2d548d
*/

@import url('https://fonts.googleapis.com/css?family=Courgette');

#selector_date {
	height: 34px;
	margin: 0px 0px !important;
}

html {
	height: 100%;
}

body {
	height: 100%;
	margin-top: 0px !important;
	background-color: #f8f9fa;
}

body > * {
	background-color: white;
}

.container {
	height: 100% !important;
	overflow: auto;
}

.logo {
	font-family: Courgette;
	margin: 20px 20px;
}

.container {
	box-shadow: 0px 0px 10px grey;
	height: 100%;
}

table thead {
	border-top: 3px solid #2d548d;
}

table {
	background-color: white;
	box-shadow: 2px 2px 5px grey;
}

table th {
	text-align: center;
}

table tr {
	white-space: nowrap;
}

table td:last-child() {
	width: 100%;
}

.form-control {
	background-image: linear-gradient(0deg, #2d548d 2px, rgba(0, 150, 136, 0) 0), linear-gradient(0deg, rgba(0, 0, 0, .26) 1px, transparent 0);
}

label {
	font-size: 0.8rem;
	color: #2d548d !important;
	margin-bottom: 0;
}

/* 
Loading indicator
*/

.spinner {
	animation: rotator 1.4s linear infinite;
	margin: 10px;
}

@keyframes rotator {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(270deg);
	}
}

.path {
	stroke-dasharray: 187;
	stroke-dashoffset: 0;
	transform-origin: center;
	animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
}

@keyframes colors {
	0% {
		stroke: #4285f4;
	}
	25% {
		stroke: #de3e35;
	}
	50% {
		stroke: #f7c223;
	}
	75% {
		stroke: #1b9a59;
	}
	100% {
		stroke: #4285f4;
	}
}

@keyframes dash {
	0% {
		stroke-dashoffset: 187;
	}
	50% {
		stroke-dashoffset: 46.75;
		transform: rotate(135deg);
	}
	100% {
		stroke-dashoffset: 187;
		transform: rotate(450deg);
	}
}

